--- a/main.html
+++ b/main.html
@@ -48,7 +48,7 @@
 			</div>
 		<div>
 			<lable for="password">Password</lable>
-			<input type="password" id="password" placeholder="password" required/>
+			<input type="password" id="password" placeholder="Password" required/>
 		</div>
 		<div>
 			<label for="tos">I agree to the TOS</label>
