--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
 		</div>
 		<div>
 			<label for="age">Age</label>
-			<input type="numbers" id="age" placeholder="Age" required/>
+			<input type="numbers" id="age" placeholder="Age" required>
 			</div>
 		<div>
 			<label for="dob">DOB</label>
@@ -44,11 +44,11 @@
 			</div>
 		<div>
 			<lable for="tel">Phone Number</lable>
-			<input type="tel" id="tel" placeholder="xxx-xxx-xxxx"/>
+			<input type="tel" id="tel" placeholder="xxx-xxx-xxxx">
 			</div>
 		<div>
 			<lable for="password">Password</lable>
-			<input type="password" id="password" placeholder="Password" required/>
+			<input type="password" id="password" placeholder="Password" required>
 		</div>
 		<div>
 			<label for="tos">I agree to the TOS</label>
