--- a/main.html
+++ b/main.html
@@ -52,9 +52,9 @@
 		</div>
 		<div>
 			<label for="tos">I agree to the TOS</label>
-			<input type="checkbox" id="tos" required/>
+			<input type="checkbox" id="tos" required>
 		</div>
-		<button type="submit" required >Singup
+		<button type="submit" required>Singup
 		</button>
 			
 	</form>
