--- a/main.html
+++ b/main.html
@@ -43,12 +43,12 @@
 			<input type="date" id="dob" required/>
 			</div>
 		<div>
-			<lable for="tel">Phone Number</lable>
-			<input type="tel" id="tel" placeholder="xxx-xxx-xxxx">
+			<lable for="tel">PhoneNumber</lable>
+			<input type="Tel" id="tel" placeholder="xxx-xxx-xxxx">
 			</div>
 		<div>
 			<lable for="password">Password</lable>
-			<input type="password" id="password" placeholder="Password" required>
+			<input type="Password" id="password" placeholder="Password" required>
 		</div>
 		<div>
 			<label for="tos">I agree to the TOS</label>
