--- a/main.html
+++ b/main.html
@@ -8,54 +8,42 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form action="singup-form-car.php" method="post">
-		<div>
-		<label for="name">Name</label> 
-			<input type="text" id="name" name="name" placeholder="Name" required>
-		</div>
-		<div>
-			<label for="email">Email</label> <br>
-			<input type="email" id="email" name="email"placeholder="Email" required>
-		</div>
-		<div>
-			<lable>Gender</lable>
-			
-			<input type="radio" id=" gender_m" name="gender" required>
-			<label for="gender_m">Male</label>
-		
-			<input type="radio" id="gender_f" name="gender" required>
-			<label for="gender_f">Female</label>
-		</div>
-		<div>
-			<label for="cars">Car Brands</label>
-			<select name="cars" id="cars" required>
-				<option value="BMW">BMW</option>
-				<option value="RR">RR</option>
-				<option value="Audi">Audi</option>
-			</select>
-		</div>
-		<div>
-			<label for="age">Age</label>
-			<input type="numbers" id="age" placeholder="Age" required>
-			</div>
-		<div>
-			<label for="dob">DOB</label>
-			<input type="date" id="dob" required/>
-			</div>
-		<div>
-			<lable for="tel">PhoneNumber</lable>
-			<input type="Tel" id="tel" placeholder="xxx-xxx-xxxx">
-			</div>
-		<div>
-			<lable for="password">Password</lable>
-			<input type="Password" id="password" placeholder="Password" required>
-		</div>
-		<div>
-			<label for="tos">I agree to the TOS</label>
-			<input type="checkbox" id="tos" required>
-		</div>
-		<button type="submit" required>Singup
-		</button>
+	<form action="#" method="post">
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name" required placeholder="Name"><br>
+
+  <label for="email">Email:</label>
+  <input type="email" id="email" name="email" required placeholder="Email"><br>
+
+  <label>Gender:</label>
+  <label for="gender_m"><input type="radio" id="gender_m" name="gender" required> Male</label>
+  <label for="gender_f"><input type="radio" id="gender_f" name="gender" required> Female</label><br>
+
+  <label for="cars">Car Brands:</label>
+  <select id="cars" name="cars" required>
+    <option value="" disabled selected>--Please choose an option--</option>
+    <option value="Toyota">Toyota</option>
+    <option value="Honda">Honda</option>
+    <option value="Ford">Ford</option>
+    <option value="Chevrolet">Chevrolet</option>
+  </select><br>
+
+  <label for="age">Age:</label>
+  <input type="number" id="age" name="age" required placeholder="Age"><br>
+
+  <label for="dob">DOB:</label>
+  <input type="date" id="dob" name="dob" required><br>
+
+  <label for="tel">Phone Number:</label>
+  <input type="tel" id="tel" name="tel" placeholder="xxx-xxx-xxxx"><br>
+
+  <label for="password">Password:</label>
+  <input type="password" id="password" name="password" required placeholder="Password"><br>
+
+  <label for="tos"><input type="checkbox" id="tos" name="tos" required> I agree to the TOS</label><br>
+
+  <button type="submit">Sign Up</button>
+</form>
 			
 	</form>
     <script type="text/javascript" src="./script.js">
